# arucol-vert

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb
.github/workflows/: ccpp.yml
config/: calibration_params.xml  general_params.xml  out_camera_data.xml  out_camera_data_fish_eye.xml  out_camera_data_fisheye.xml
include/: UARTCommunication.hpp  arucolVert.hpp  arucolVertParams.hpp  cameraParams.hpp  fileExport.hpp  geometricalTools.hpp
src/: UARTCommunication.cpp  arucolVert.cpp  arucolVertParams.cpp  cameraParams.cpp  fileExport.cpp  main.cpp  main_calib.cpp  optical_flow.cpp
test/: CMakeLists.txt  test_geometrical_tools.cpp  test_params.cpp
test/data/: test_camera_params.xml
